[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/enemies/behaviors/mypathfollow2d.gd" type="Script" id=1]
[ext_resource path="res://src/enemies/behaviors/point.gd" type="Script" id=2]

[node name="mypathfollow2d" type="Node2D"]
script = ExtResource( 1 )

[node name="points" type="Node2D" parent="."]

[node name="point0" type="Position2D" parent="points"]
position = Vector2( 42, 48 )
script = ExtResource( 2 )
wait_time = 3

[node name="point1" type="Position2D" parent="points"]
position = Vector2( 90, 32 )
script = ExtResource( 2 )

[node name="wait_timer" type="Timer" parent="."]

[node name="single_movement_timer_wait" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="timeout" from="wait_timer" to="." method="_on_wait_timer_timeout"]
